--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Water Quality Monitoring</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: #e6f0ff;
             margin: 0;
             padding: 0;
         }
         nav {
-            background-color: #4CAF50;
+            background-color: #022245;
             padding: 1em;
             color: white;
             text-align: center;
@@ -46,7 +47,7 @@
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
         #map {
-            height: 400px;
+            height: 500px;
             width: 100%;
             margin-top: 20px;
         }
@@ -64,7 +65,7 @@
             text-align: left;
         }
         th {
-            background-color: #4CAF50;
+            background-color: #0056b3;
             color: white;
         }
         .faq, .research {
@@ -73,6 +74,12 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        .marker-label {
+            background: rgba(0, 123, 255, 0.7);
+            color: white;
+            padding: 5px;
+            border-radius: 4px;
         }
     </style>
 </head>
@@ -146,105 +153,37 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script>
-        // Data Sample
+        // Sample water quality data
         const data = [
-            { state: "California", city: "Los Angeles", pH: 7.5, temperature: 18, turbidity: 3 },
-            { state: "Texas", city: "Austin", pH: 6.9, temperature: 22, turbidity: 1 },
-            { state: "New York", city: "New York City", pH: 7.0, temperature: 20, turbidity: 4 },
-            // Add more data as needed
+            { state: "Maharashtra", city: "Mumbai", pH: 7.5, temperature: 28, turbidity: 3, coordinates: [19.0760, 72.8777] },
+            { state: "Karnataka", city: "Bangalore", pH: 6.9, temperature: 24, turbidity: 1, coordinates: [12.9716, 77.5946] },
+            { state: "Delhi", city: "New Delhi", pH: 7.0, temperature: 26, turbidity: 4, coordinates: [28.6139, 77.2090] },
+            { state: "Tamil Nadu", city: "Chennai", pH: 7.3, temperature: 29, turbidity: 2, coordinates: [13.0827, 80.2707] },
+            { state: "West Bengal", city: "Kolkata", pH: 7.4, temperature: 27, turbidity: 3, coordinates: [22.5726, 88.3639] },
+            { state: "Uttar Pradesh", city: "Lucknow", pH: 6.8, temperature: 30, turbidity: 5, coordinates: [26.8467, 80.9462] }
         ];
 
-        // Function to calculate averages
-        function calculateAverages() {
-            let totalPh = 0, totalTemp = 0, totalTurbidity = 0, count = data.length;
+        // Function to simulate fetching averages from a backend
+        function fetchAverages() {
+            // Simulate a network request with a delay
+            setTimeout(() => {
+                const avgPh = data.reduce((sum, item) => sum + item.pH, 0) / data.length;
+                const avgTemp = data.reduce((sum, item) => sum + item.temperature, 0) / data.length;
+                const avgTurbidity = data.reduce((sum, item) => sum + item.turbidity, 0) / data.length;
 
-            data.forEach(item => {
-                totalPh += item.pH;
-                totalTemp += item.temperature;
-                totalTurbidity += item.turbidity;
-            });
-
-            document.getElementById('avgPh').innerText = (totalPh / count).toFixed(2);
-            document.getElementById('avgTemp').innerText = (totalTemp / count).toFixed(2);
-            document.getElementById('avgTurbidity').innerText = (totalTurbidity / count).toFixed(2);
+                document.getElementById('avgPh').innerText = avgPh.toFixed(2);
+                document.getElementById('avgTemp').innerText = avgTemp.toFixed(2);
+                document.getElementById('avgTurbidity').innerText = avgTurbidity.toFixed(2);
+            }, 1000); // Simulate a delay of 1 second
         }
 
-        // Function to render graph
-        function renderGraph() {
-            const ctx = document.getElementById('myChart').getContext('2d');
-            new Chart(ctx, {
-                type: 'line',
-                data: {
-                    labels: data.map(item => item.city),
-                    datasets: [{
-                        label: 'pH Level',
-                        data: data.map(item => item.pH),
-                        backgroundColor: 'rgba(54, 162, 235, 0.6)',
-                        borderColor: 'rgba(54, 162, 235, 1)',
-                        borderWidth: 2,
-                        fill: true // Fill under the line
-                    }, {
-                        label: 'Temperature (°C)',
-                        data: data.map(item => item.temperature),
-                        backgroundColor: 'rgba(255, 206, 86, 0.6)',
-                        borderColor: 'rgba(255, 206, 86, 1)',
-                        borderWidth: 2,
-                        fill: true // Fill under the line
-                    }, {
-                        label: 'Turbidity',
-                        data: data.map(item => item.turbidity),
-                        backgroundColor: 'rgba(75, 192, 192, 0.6)',
-                        borderColor: 'rgba(75, 192, 192, 1)',
-                        borderWidth: 2,
-                        fill: true // Fill under the line
-                    }]
-                },
-                options: {
-                    responsive: true,
-                    scales: {
-                        y: {
-                            beginAtZero: true,
-                            title: {
-                                display: true,
-                                text: 'Measurement'
-                            }
-                        },
-                        x: {
-                            title: {
-                                display: true,
-                                text: 'Cities'
-                            }
-                        }
-                    },
-                    plugins: {
-                        legend: {
-                            display: true,
-                            position: 'top'
-                        },
-                        tooltip: {
-                            mode: 'index',
-                            intersect: false,
-                        }
-                    }
-                }
-            });
-        }
-
-        // Function to render map
-        function initMap() {
-            const mapOptions = {
-                center: { lat: 37.7749, lng: -122.4194 },
-                zoom: 5
-            };
-            const map = new google.maps.Map(document.getElementById('map'), mapOptions);
-        }
-
-        // Function to render state data table
+        // Function to render the state-wise data table
         function renderDataTable() {
-            const tbody = document.getElementById('stateDataTable').getElementsByTagName('tbody')[0];
+            const tableBody = document.getElementById('stateDataTable').getElementsByTagName('tbody')[0];
             data.forEach(item => {
-                const row = tbody.insertRow();
+                const row = tableBody.insertRow();
                 row.insertCell(0).innerText = item.state;
                 row.insertCell(1).innerText = item.city;
                 row.insertCell(2).innerText = item.pH;
@@ -253,13 +192,60 @@
             });
         }
 
-        // Initializing the page
-        window.onload = function() {
-            calculateAverages();
-            renderGraph();
+        // Initialize map and markers
+        function initMap() {
+            const map = L.map('map').setView([20.5937, 78.9629], 5);
+            L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
+            data.forEach(item => {
+                const marker = L.marker(item.coordinates).addTo(map);
+                marker.bindPopup(`<div class="marker-label">${item.city}, ${item.state}<br>pH: ${item.pH}, Temp: ${item.temperature}°C, Turbidity: ${item.turbidity}</div>`);
+            });
+        }
+
+        // Render chart
+        function renderChart() {
+            const ctx = document.getElementById('myChart').getContext('2d');
+            const chart = new Chart(ctx, {
+                type: 'bar',
+                data: {
+                    labels: data.map(item => item.city),
+                    datasets: [{
+                        label: 'pH Level',
+                        data: data.map(item => item.pH),
+                        backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                        borderColor: 'rgba(75, 192, 192, 1)',
+                        borderWidth: 1
+                    }, {
+                        label: 'Temperature (°C)',
+                        data: data.map(item => item.temperature),
+                        backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                        borderColor: 'rgba(255, 99, 132, 1)',
+                        borderWidth: 1
+                    }, {
+                        label: 'Turbidity',
+                        data: data.map(item => item.turbidity),
+                        backgroundColor: 'rgba(54, 162, 235, 0.2)',
+                        borderColor: 'rgba(54, 162, 235, 1)',
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    scales: {
+                        y: {
+                            beginAtZero: true
+                        }
+                    }
+                }
+            });
+        }
+
+        // Initialize the app
+        document.addEventListener('DOMContentLoaded', () => {
+            fetchAverages();
             renderDataTable();
-        };
+            initMap();
+            renderChart();
+        });
     </script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"></script>
 </body>
 </html>
